# doks-rs

./: Cargo.toml
examples/data/configs/: simple_fs.json  simple_gh.json
examples/data/files/: file1.txt  file2.txt
src/: main.rs  model.rs
src/cli/: config.rs  mod.rs
src/search/: mod.rs  tantivy_impl.rs
src/sources/: fs.rs  gh.rs  mod.rs  static_list.rs
src/utils/: json.rs  mod.rs  streams.rs
