[package]
edition = "2018"
name = "doks-rs"
version = "0.1.0"

[dependencies]
uuid = { version = "*", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
anyhow = "1"
regex = "1"
async-walkdir = "0.2"
tempdir = "0.3"
async-stream = "0.3"
tantivy = "0.16"
structopt = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.9"